Created gender, category, product, product_item, cart, cart_item, favorite models and some seeders added

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec tsx src/index.ts"
+    "dev": "nodemon --watch src --ext ts --exec tsx src/index.ts",
+    "seed": "nodemon --watch src --ext ts --exec tsx src/database/seed.ts"
   },
   "keywords": [],
   "author": "Parviz Haydarov",
