--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,26 +1,30 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
+    "target": "ES2022",
+    "module": "ES2022",
     "moduleResolution": "node",
-    "outDir": "./dist",
+    "lib": ["ES2022"],
     "rootDir": "./src",
-
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "outDir": "./dist",
 
     "strict": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-
-    "noEmit": false,
 
     "skipLibCheck": true,
 
+    "baseUrl": "./src",
     "paths": {
-      "*": ["./src/*"]
-    }
+      "@/*": ["*"]
+    },
+
+    "noEmit": false,
+    "sourceMap": true
   },
-  "ts-node": { "esm": true },
+  "ts-node": {
+    "esm": true
+  },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist"]
+  "exclude": ["dist", "node_modules"]
 }
